# obf0

./: .clang-format  CMakeLists.txt  README.md  obf0.cpp  test.c  x.sh
sample/: simple.c
src/: CMakeLists.txt  obf0.cpp  secpol.cpp  secpol.h
src/obf0/: CMakeLists.txt  obf0.cpp  secpol.cpp  secpol.hpp
src/obf0/passes/: CMakeLists.txt
src/obf0/passes/icall/: CMakeLists.txt  icall.cpp  icall.hpp
src/obf0/passes/mba/: CMakeLists.txt  mba.cpp  mba.hpp
src/obf0/passes/opq/: CMakeLists.txt  opq.cpp  opq.hpp
src/obf0/utility/: llvm.cpp  llvm.hpp
src/test/: simple.c
tools/: build  fmt  ir  test
